# agent-workshop

./: .env.example  .gitignore  .gitleaksignore  .triangle.toml  CLAUDE.md  README.md  TEST_REPORT.md  dev_guidelines.md  examples.ipynb  prompts.yaml.example  pyproject.toml  python  test_prebuilt_agents.py
blueprints/: README.md
blueprints/brainstorms/: data_science_notebook_validator.md  software_dev_code_reviewer.md  software_dev_pr_pipeline.md  software_dev_release_pipeline.md
blueprints/code_templates/: langgraph_agent.py.jinja2  simple_agent.py.jinja2
blueprints/patterns/: README.md
blueprints/schema/: blueprint_schema.yaml
blueprints/specs/: data_science_notebook_validator.yaml  software_dev_code_reviewer.yaml  software_dev_pr_comment_processor.yaml  software_dev_pr_pipeline.yaml  software_dev_release_pipeline.yaml
blueprints/templates/: brainstorm_template.md
docs/: pr_workflows.md
examples/blueprint_usage/: .env.example  README.md  example_blueprint.yaml  generate_agent.py
examples/langgraph_pipeline/: .env.example  README.md  pipeline.py
examples/simple_validator/: README.md  validator.py
notebooks/tutorials/: 00_getting_started.ipynb  01_deliverable_validator.ipynb  02_validation_pipeline.ipynb  03_code_reviewer.ipynb  04_pr_pipeline.ipynb  05_release_pipeline.ipynb  06_notebook_validator.ipynb  07_blueprint_system.ipynb  08_triangle_quickstart.ipynb  09_triangle_configuration.ipynb
scripts/: check.sh
src/agent_workshop/: __init__.py  agent.py  config.py
src/agent_workshop/agents/: __init__.py
src/agent_workshop/agents/data_science/: __init__.py  notebook_validator_generated.py
src/agent_workshop/agents/pipelines/: __init__.py  validation.py
src/agent_workshop/agents/software_dev/: __init__.py  code_reviewer.py  issue_to_pr.py  pr_comment_processor.py  pr_pipeline.py  presets.py  release_pipeline.py  triangle_orchestrator.py
src/agent_workshop/agents/software_dev/config/: __init__.py  triangle_config.py
src/agent_workshop/agents/software_dev/types/: __init__.py  github.py  metrics.py  state.py
src/agent_workshop/agents/software_dev/utils/: __init__.py  git_operations.py  github_client.py  verification.py
src/agent_workshop/agents/validators/: __init__.py  deliverable.py  presets.py
src/agent_workshop/blueprints/: __init__.py  agent_builder.py  code_generator.py  schema.py  validators.py
src/agent_workshop/cli/: __init__.py  main.py  triangle.py
src/agent_workshop/providers/: __init__.py  anthropic_api.py  base.py  claude_agent_sdk.py
src/agent_workshop/utils/: __init__.py  calculator.py  formatter.py  langfuse_helpers.py  metrics_collector.py  persistence.py  string_helpers.py  validation_helpers.py
src/agent_workshop/workflows/: __init__.py  langgraph_agent.py
tests/: conftest.py  test_integration_claude_sdk.py  test_langfuse_integration.py  test_software_dev_agents.py
tests/fixtures/: __init__.py  mock_responses.py
tests/integration/: test_triangle_workflow.py
